# rednote-research-agent

./: .dockerignore  .env.docker  .gitignore  .gitmodules  README.md  docker-compose.prod.yml  docker-compose.yml  fabric_process_log.md  get_login_qrcode.py  login_qrcode.html  package-lock.json  test_detail_delay.py  test_mcp.py  test_mcp_connection.py  test_xiaohongshu_mcp_api.py
docker/: Dockerfile  entrypoint.sh
rednote_research/: .env  .env.example  README.md  __init__.py  cli.py  config.example.yaml  config.py  pyproject.toml  state.py
rednote_research/agents/: __init__.py  analyzer.py  base.py  image_validator.py  orchestrator.py  planner.py  searcher.py
rednote_research/frontend/: index.html  package-lock.json  package.json  vite.config.ts
rednote_research/frontend/src/: App.vue  main.ts
rednote_research/mcp/: __init__.py  client.py  http_client.py  rednote.py
rednote_research/output/: __init__.py  exporter.py  html_generator.py  image_analyzer.py  image_assigner.py  image_processor.py  outline_generator.py
rednote_research/prompts/: __init__.py  analyzer.py  image_analyzer.py  outline_generator.py  planner.py  searcher.py  section_writer.py
rednote_research/services/: __init__.py  history.json  history.py  image_generator.py  publisher.py  settings.json  settings.py  timer.py
rednote_research/web/: __init__.py  app.py  context.py
rednote_research/web/routers/: history.py  mcp.py  publish.py  research.py  settings.py  tools.py
rednote_research/web/routes/: __init__.py  history.py  publish.py  settings.py
rednote_research/web/schemas/: sse.py
(+48 files in other folders)
